Fix offcenter aligment of thumbnails

--- a/dossiers/dossiers.css
+++ b/dossiers/dossiers.css
@@ -24,16 +24,17 @@ body {
 .cardback-container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
-    width: 100%;
     max-width: 1500px;
     margin: 1em auto 2em auto;
     box-sizing: border-box;
 }
 
 .thumbnail-container {
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
     color:#fff;
     margin: 0 1em 1em 0;
